# WanFlow.ai

./: .dockerignore  .gitignore  .impeccable.md  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.remote-image.yml  docker-compose.warmup.override.yml  pyproject.toml  subtask_1_full_site_audit_remediation_20260406.md  subtask_2_delivery_cleanup_and_release_20260407.md  subtask_3_history_path_normalization_and_git_init_20260407.md
DataFlow/proofbench/: index.ts
_migration/: 2026-04-11-conversation-record.md  2026-04-11-migration-handoff.md  README.txt  checksums.sha256  docker-hkz.md  release-and-delivery.md  repo-snapshot.manifest.txt
_migration/pre-git-backup/: wanflow-web.env  wanflow-web.warmup.env
deploy/docker/: start-wanflow-web.sh  wanflow-web.env.example
deploy/systemd/: install-systemd.sh  install-user-systemd.sh  start-wanflow-web.sh  wanflow-web.env.example
design-system/wanflow.ai/: MASTER.md
docs/: project-status-and-roadmap.md  release-and-delivery.md
docs/deployment/: systemd-linux.md
examples/: qf3_item.json
samples/: README.md
samples/reference/: QF3-yang-mills-monopole.tex  demo_2026.4.2(1).xlsx  problem2_题目.jsonl  数学竞赛题(1).docx
src/math_eval_framework/: __init__.py  cli.py  exporter.py  (+6 more)
src/math_eval_framework.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: test_exporter.py  test_normalizer.py  test_scoring.py  test_utils.py
update/: GEO_UPDATE_LOG.md  README.md
web/: .env.example  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
(+137 files in other folders)
